--- a/frontend/allpack/iriza/iriza.html
+++ b/frontend/allpack/iriza/iriza.html
@@ -85,8 +85,8 @@
                 <div class="card">
                     <img src="/frontend/allpack/iriza/irizadata/iriza0.jpg" class="card-img-top" alt="Professional Waiter Service" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza0.jpg')">
                     <div class="card-body">
-                        <h5 class="card-title">Professional Waiter Service</h5>
-                        <p class="card-text">Our team offers exceptional waiter services, ensuring every guest is well-attended during your event.</p>
+                        <h5 class="card-title">Dedicated Waitstaff</h5>
+                        <p class="card-text">Our team provides attentive, professional waitstaff that ensure your event runs smoothly and your guests are always taken care of.</p>
                     </div>
                 </div>
             </div>
@@ -95,8 +95,8 @@
                 <div class="card">
                     <img src="/frontend/allpack/iriza/irizadata/iriza10.jpg" class="card-img-top" alt="Serving Guests with Style" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza10.jpg')">
                     <div class="card-body">
-                        <h5 class="card-title">Serving Guests with Style</h5>
-                        <p class="card-text">Elegance is key, and we ensure every service is delivered with style and professionalism.</p>
+                        <h5 class="card-title">Elegance in Every Detail</h5>
+                        <p class="card-text">Our skilled staff delivers impeccable service with an emphasis on elegance, ensuring that your event leaves a lasting impression.</p>
                     </div>
                 </div>
             </div>
@@ -105,8 +105,8 @@
                 <div class="card">
                     <img src="/frontend/allpack/iriza/irizadata/iriza11.jpg" class="card-img-top" alt="Exquisite Service at Every Event" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza11.jpg')">
                     <div class="card-body">
-                        <h5 class="card-title">Exquisite Service at Every Event</h5>
-                        <p class="card-text">From weddings to corporate gatherings, we provide unmatched service that leaves a lasting impression.</p>
+                        <h5 class="card-title">Unforgettable Event Service</h5>
+                        <p class="card-text">We provide seamless service, ensuring every detail is meticulously planned to create an unforgettable experience for you and your guests.</p>
                     </div>
                 </div>
             </div>
@@ -115,8 +115,8 @@
                 <div class="card">
                     <img src="/frontend/allpack/iriza/irizadata/fiston1.jpg" class="card-img-top" alt="Elegant Presentation" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/fiston.jpg')">
                     <div class="card-body">
-                        <h5 class="card-title">Elegant Presentation</h5>
-                        <p class="card-text">Our team ensures that every presentation is elegant, stylish, and perfect for your special occasion.</p>
+                        <h5 class="card-title">Impressive Presentation</h5>
+                        <p class="card-text">Our presentation of food and service is designed to impress, ensuring your guests are wowed by both taste and style.</p>
                     </div>
                 </div>
             </div>
@@ -125,8 +125,8 @@
                 <div class="card">
                     <img src="/frontend/allpack/iriza/irizadata/iriza9.jpg" class="card-img-top" alt="Impeccable Attention to Detail" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza9.jpg')">
                     <div class="card-body">
-                        <h5 class="card-title">Impeccable Attention to Detail</h5>
-                        <p class="card-text">We believe in paying attention to the smallest details, ensuring everything is perfect for your event.</p>
+                        <h5 class="card-title">Flawless Execution</h5>
+                        <p class="card-text">From the smallest details to the grandest gestures, we ensure everything is perfectly executed to match your vision.</p>
                     </div>
                 </div>
             </div>
@@ -135,72 +135,71 @@
                 <div class="card">
                     <img src="/frontend/allpack/iriza/irizadata/iriza14.jpg" class="card-img-top" alt="Providing Exceptional Service" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza14.jpg')">
                     <div class="card-body">
-                        <h5 class="card-title">Providing Exceptional Service</h5>
-                        <p class="card-text">We pride ourselves on offering exceptional service that exceeds expectations at every event.</p>
+                        <h5 class="card-title">Top-Tier Service Excellence</h5>
+                        <p class="card-text">We prioritize delivering top-tier service that goes above and beyond expectations for an extraordinary event experience.</p>
                     </div>
                 </div>
             </div>
-             <!-- Card 7 -->
-             <div class="col">
+            <!-- Card 7 -->
+            <div class="col">
                 <div class="card">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza2.jpg" class="card-img-top" alt="Providing Exceptional Service" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza2.jpg')">
+                    <img src="/frontend/allpack/iriza/irizadata/iriza2.jpg" class="card-img-top" alt="Exclusive Event Support" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza2.jpg')">
                     <div class="card-body">
-                        <h5 class="card-title">Providing Exceptional Service</h5>
-                        <p class="card-text">We pride ourselves on offering exceptional service that exceeds expectations at every event.</p>
+                        <h5 class="card-title">Exclusive Event Support</h5>
+                        <p class="card-text">Our dedicated team ensures every event is supported with the right resources, making it effortless for you to enjoy your special day.</p>
                     </div>
                 </div>
             </div>
-             <!-- Card 8 -->
-             <div class="col">
+            <!-- Card 8 -->
+            <div class="col">
                 <div class="card">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza03.jpg" class="card-img-top" alt="Providing Exceptional Service" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza03.jpg')">
+                    <img src="/frontend/allpack/iriza/irizadata/iriza03.jpg" class="card-img-top" alt="Deluxe Event Solutions" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza03.jpg')">
                     <div class="card-body">
-                        <h5 class="card-title">Providing Exceptional Service</h5>
-                        <p class="card-text">We pride ourselves on offering exceptional service that exceeds expectations at every event.</p>
+                        <h5 class="card-title">Tailored Event Solutions</h5>
+                        <p class="card-text">We offer tailored event solutions that meet your unique needs, ensuring that every aspect of your event is perfect.</p>
                     </div>
                 </div>
             </div>
-             <!-- Card 9 -->
-             <div class="col">
+            <!-- Card 9 -->
+            <div class="col">
                 <div class="card">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza4.jpg" class="card-img-top" alt="Providing Exceptional Service" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza4.jpg')">
+                    <img src="/frontend/allpack/iriza/irizadata/iriza4.jpg" class="card-img-top" alt="Unrivaled Event Service" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza4.jpg')">
                     <div class="card-body">
-                        <h5 class="card-title">Providing Exceptional Service</h5>
-                        <p class="card-text">We pride ourselves on offering exceptional service that exceeds expectations at every event.</p>
+                        <h5 class="card-title">Unrivaled Event Service</h5>
+                        <p class="card-text">Our event service stands out for its professionalism, creativity, and attention to detail, ensuring your event is nothing short of extraordinary.</p>
                     </div>
                 </div>
             </div>
-             <!-- Card 10 -->
-             <div class="col">
+            <!-- Card 10 -->
+            <div class="col">
                 <div class="card">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza5.jpg" class="card-img-top" alt="Providing Exceptional Service" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza5.jpg')">
+                    <img src="/frontend/allpack/iriza/irizadata/iriza5.jpg" class="card-img-top" alt="Event Perfection" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza5.jpg')">
                     <div class="card-body">
-                        <h5 class="card-title">Providing Exceptional Service</h5>
-                        <p class="card-text">We pride ourselves on offering exceptional service that exceeds expectations at every event.</p>
+                        <h5 class="card-title">Flawless Event Coordination</h5>
+                        <p class="card-text">Every event is seamlessly coordinated, with careful planning and professional execution to create a flawless experience for all.</p>
                     </div>
                 </div>
             </div>
-             <!-- Card 11 -->
-             <div class="col">
+            <!-- Card 11 -->
+            <div class="col">
                 <div class="card">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza6.jpg" class="card-img-top" alt="Providing Exceptional Service" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza6.jpg')">
+                    <img src="/frontend/allpack/iriza/irizadata/iriza6.jpg" class="card-img-top" alt="Elite Event Service" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza6.jpg')">
                     <div class="card-body">
-                        <h5 class="card-title">Providing Exceptional Service</h5>
-                        <p class="card-text">We pride ourselves on offering exceptional service that exceeds expectations at every event.</p>
+                        <h5 class="card-title">Elite Event Service</h5>
+                        <p class="card-text">We deliver elite service, ensuring that each event is a memorable occasion that exceeds all expectations.</p>
                     </div>
                 </div>
             </div>
-             <!-- Card 12 -->
-             <div class="col">
+            <!-- Card 12 -->
+            <div class="col">
                 <div class="card">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza8.jpg" class="card-img-top" alt="Providing Exceptional Service" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza8.jpg')">
+                    <img src="/frontend/allpack/iriza/irizadata/iriza8.jpg" class="card-img-top" alt="Premium Event Solutions" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza8.jpg')">
                     <div class="card-body">
-                        <h5 class="card-title">Providing Exceptional Service</h5>
-                        <p class="card-text">We pride ourselves on offering exceptional service that exceeds expectations at every event.</p>
+                        <h5 class="card-title">Premium Event Solutions</h5>
+                        <p class="card-text">Our premium event services are designed to elevate your experience, offering exceptional service, style, and care throughout the event.</p>
                     </div>
                 </div>
             </div>
-            <!-- Add more cards here by duplicating the structure above -->
         </div>
     </div>
 
@@ -237,42 +236,26 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <h5>Contact Us</h5>
-                    <p class="footer-content">Email: info@eventplanner.com</p>
-                    <p class="footer-content">Phone: +250785300707</p>
-                    <p class="footer-content">Address: 123 Event St, City, Country</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col text-center mt-4">
-                    <ul class="list-inline footer-content">
-                        <li class="list-inline-item">
-                            <a href="#" class="text-light social-icon"><i class="fab fa-facebook"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#" class="text-light social-icon"><i class="fab fa-twitter"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="https://www.instagram.com/muyenzi_jacques/" class="text-light social-icon"><i class="fab fa-instagram"></i></a>
-                        </li>
+                    <h5>Connect With Us</h5>
+                    <ul class="list-unstyled footer-content">
+                        <li><a href="#" class="text-light"><i class="fab fa-facebook-f"></i> Facebook</a></li>
+                        <li><a href="#" class="text-light"><i class="fab fa-twitter"></i> Twitter</a></li>
+                        <li><a href="#" class="text-light"><i class="fab fa-instagram"></i> Instagram</a></li>
+                        <li><a href="#" class="text-light"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
                     </ul>
                 </div>
             </div>
-            <div class="row">
-                <div class="col text-center mt-3">
-                    <p>&copy; 2024 Event Planner. All rights reserved.</p>
-                </div>
+            <div class="text-center mt-4">
+                <p class="footer-content">&copy; 2025 Event Planner. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
-
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         function openModal(imageSrc) {
-            const modalImage = document.getElementById('modalImage');
-            modalImage.src = imageSrc;
+            document.getElementById('modalImage').src = imageSrc;
         }
     </script>
 </body>
