--- a/frontend/home_packages/index.html
+++ b/frontend/home_packages/index.html
@@ -13,7 +13,6 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-
     <!-- FontAwesome for icons -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
@@ -182,11 +181,12 @@
       </div>
       <div class="col-md-4">
       <div class="card " >
-  
+        <a href="/frontend/allpack/iriza/iriza.html">
         <img src="/assethome/iriza14.jpg" class="card-img-top" alt="...">
+        </a>
         <div class="card-body d-flex flex-column">
           <h5 class="card-title mb-2">Service</h5>
-          <a href="#" class="btn btn-primary">Read More</a>
+          <a href="/frontend/allpack/iriza/iriza.html" class="btn btn-primary">Read More</a>
         </div>
       </div>
     </div>
